--- a/inner.html
+++ b/inner.html
@@ -12,6 +12,7 @@
 <body>
     <div class="wrapper">
        <span>&#128514</span>
+       <p id="category"></p>
        <p id="joke"></p>
        <button id="btn"> Get Random Joke</button>
     </div>
